[package]
name = "sql-layer"
version = "0.1.0"
edition = "2024"
resolver = "3"
authors = [
    "Yannick Guern<dev@guern.eu>"
]

[dependencies]
apache-avro = { version = "0.17.0", features = ["derive"] }
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
foundationdb-tuple = "0.9.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
futures = "0.3.31"
futures-util = "0.3.31"
async-stream = "0.3.6"

[dev-dependencies]
fdb-testcontainer = { git = "https://gitlab.com/Akanoa/fdb-testcontainer.git" }